ktu karjeros dienos slides

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li><a href="being-dangerous-with-git-rebase/index.html"><strong>2013-07-31</strong> Being dangerous with <strong>git</strong></a></li>
       <li><a href="doctrine-extensions/index.html"><strong>2013-12-09</strong> Doctrine Behavioral Extensions</a></li>
       <li><a href="testing-by-example/index.html"><strong>2014-01-18</strong> Testing by example</a></li>
+      <li><a href="ktu-karjeros-dienos/index.html"><strong>2014-03-02</strong> KTU - karjeros dienos</a></li>
     </ul>
   </div>
 </body>
