fix a slide link

--- a/ktu-karjeros-dienos/index.html
+++ b/ktu-karjeros-dienos/index.html
@@ -172,7 +172,7 @@
 
           <img src="img/question_everything.jpg" height="400px" alt="Questions?" />
 
-          <p>Slides are available at: <a href="slides.gediminasm.org">slides.gediminasm.org</a></p>
+          <p>Slides are available at: <a href="http://slides.gediminasm.org">slides.gediminasm.org</a></p>
           <p>Powered by: <a href="http://lab.hakim.se/reveal-js/">Revealjs</a>
         </section>
 
