--- a/testing-by-example/index.html
+++ b/testing-by-example/index.html
@@ -637,7 +637,7 @@ function it_should_be_able_to_scan_data()
 
           <img src="img/question_everything.jpg" height="400px" alt="Questions?" />
 
-          <p>Slides are available at: <a href="slides.gediminasm.org">slides.gediminasm.org</a></p>
+          <p>Slides are available at: <a href="http://slides.gediminasm.org">slides.gediminasm.org</a></p>
           <p>code and demo can be <a href="http://slides.gediminasm.org/testing-by-example/files/quirky.tar.gz">downloaded here</a></p>
           <p>Powered by: <a href="http://lab.hakim.se/reveal-js/">Revealjs</a>
         </section>
