update testing by example

--- a/testing-by-example/index.html
+++ b/testing-by-example/index.html
@@ -102,7 +102,31 @@
 
           <p class="fragment">Yeah right.. we know how it ends, don't we?</p>
 
-          <img class="fragment" src="img/legacy-code.jpg" height="500px" alt="Just do it"/>
+          <img class="fragment" src="img/legacy-code.jpg" height="500px" alt="Legacy Code"/>
+        </section>
+
+        <section>
+          <p><strong>So the lesson here is:</strong></p>
+
+          <img class="fragment" src="img/legacy_code.png" height="300px" alt="Do testing"/>
+
+          <p class="fragment">Why? Because you cannot refactor that:</p>
+
+          <img class="fragment" src="img/spaghetti.jpg" height="250px" alt="spaghetti"/>
+        </section>
+
+        <section>
+          <p><strong>Lets estimate how long it will take to add new feature to legacy app:</strong></p>
+
+          <div class="fragment">
+            <p><strong>3 packs of..</strong></p>
+            <img src="img/prozac.jpg" height="200px" alt="Prozac pills"/>
+          </div>
+
+          <div class="fragment">
+            <p><strong>2 more employees.. because I'm writing</strong></p>
+            <img src="img/medleave.jpg" height="200px" alt="Medical leave request"/>
+          </div>
         </section>
 
         <section>
@@ -635,10 +659,10 @@ function it_should_be_able_to_scan_data()
         <section>
           <h3>Thank you</h3>
 
-          <img src="img/question_everything.jpg" height="400px" alt="Questions?" />
+          <img src="img/gopher.png" class="no-border" height="300px" alt="Questions?" />
 
           <p>Slides are available at: <a href="http://slides.gediminasm.org">slides.gediminasm.org</a></p>
-          <p>code and demo can be <a href="http://slides.gediminasm.org/testing-by-example/files/quirky.tar.gz">downloaded here</a></p>
+          <p>Code and demo <a href="http://slides.gediminasm.org/testing-by-example/files/quirky.tar.gz">slides.gediminasm.org/testing-by-example/files/quirky.tar.gz</a></p>
           <p>Powered by: <a href="http://lab.hakim.se/reveal-js/">Revealjs</a>
         </section>
 
