--- a/index.html
+++ b/index.html
@@ -6,25 +6,45 @@
   <meta name="robots" content="noindex, nofollow" />
 
   <style>
-  #content {
-    margin: 0px auto;
-    padding: 100px 0;
-    text-align: center;
-  }
-  li {
-    list-style: none;
-  }
+/* BASIC RESET */
+ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,body,html,p,blockquote,fieldset,input{margin:0; padding:0;}
+
+/* HTML ELEMENTS */
+body { background: #1d1d1d; color: #fff; background-image:url("../images/bg.png"); background-repeat:repeat-x; }
+h2, h1 { font: bold 65px/60px Helvetica, Arial, Sans-serif; text-align: center; color: #eee; text-shadow: 0px 2px 6px #333; }
+h2 small{ font-size: 20px; text-transform:uppercase; letter-spacing: 14px; display: block; color: #ccc; }
+
+/* WRAPPER */
+#wrapper { width:800px; margin:40px auto; }
+
+.ol-list { width:320px; float: left; }
+.ol-list ol { font-style:italic; font-family:Georgia, Times, serif; font-size:24px; color:#bfe1f1;  }
+.ol-list ol li { }
+.ol-list ol li p { padding:8px; font-style:normal; font-family:Arial; font-size:13px; color:#eee; border-left: 1px solid #999; }
+.ol-list ol li p em { display:block; }
+.ol-list ol li a { text-decoration:none; color:#eee; }
+.ol-list ol li a:hover { text-decoration:underline; }
   </style>
 </head>
 <body>
-  <div id="content">
-    <ul>
-      <li><a href="getting-started-with-vim/index.html"><strong>2013-06-27</strong> Getting started with ViM</a></li>
-      <li><a href="being-dangerous-with-git-rebase/index.html"><strong>2013-07-31</strong> Being dangerous with <strong>git</strong></a></li>
-      <li><a href="doctrine-extensions/index.html"><strong>2013-12-09</strong> Doctrine Behavioral Extensions</a></li>
-      <li><a href="testing-by-example/index.html"><strong>2014-01-18</strong> Testing by example</a></li>
-      <li><a href="ktu-karjeros-dienos/index.html"><strong>2014-03-02</strong> KTU - karjeros dienos</a></li>
-    </ul>
+  <div id="wrapper">
+    <h1>My slide presentations</h1>
+
+    <div class="ol-list">
+      <h2><small>Talks</small></h2>
+      <ol>
+        <li><p><a href="being-dangerous-with-git-rebase/index.html"><em>Being dangerous with git</em></a> How and why you need to learn rebase.</p></li>
+        <li><p><a href="doctrine-extensions/index.html"><em>Doctrine behavioral extensions</em></a> How to increase productivity with doctrine extensions if you use Doctrine2 ORM.</p></li>
+        <li><p><a href="testing-by-example/index.html"><em>TDD by example</em></a> How and why I use TDD.</p></li>
+        <li><p><a href="ktu-karjeros-dienos/index.html"><em>From Zero to Hero</em></a> Presentation for students of KTU.</p></li>
+      </ol>
+    </div>
+    <div class="ol-list">
+      <h2><small>GoTalks</small></h2>
+      <ol>
+        <li><p><a href="http://gotalks.gediminasm.org/why-we-use-golang.slide#1"><em>Why we use GO</em></a> Some reasons why we chosen Golang as a secondary language at DATA-DOG.</p></li>
+      </ol>
+    </div>
   </div>
 </body>
 </html>
