--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Software tech presentation slides</title>
-  <meta name="robots" content="noindex, nofollow" />
+  <title>Slide presentations</title>
+  <meta name="description" content="My slide presentations for various talks I have made.">
+  <meta name="author" content="Gediminas Morkevicius">
 
   <style>
 /* BASIC RESET */
