update demo reference

--- a/testing-by-example/index.html
+++ b/testing-by-example/index.html
@@ -657,10 +657,10 @@ function it_should_be_able_to_scan_data()
         <section>
           <h3>Thank you</h3>
 
-          <img src="img/gopher.png" class="no-border" height="300px" alt="Questions?" />
+          <img src="img/gopher.png" class="no-border" height="300" alt="Questions?" />
 
           <p>Slides are available at: <a href="http://slides.gediminasm.org">slides.gediminasm.org</a></p>
-          <p>Code and demo <a href="http://slides.gediminasm.org/testing-by-example/files/quirky.tar.gz">slides.gediminasm.org/testing-by-example/files/quirky.tar.gz</a></p>
+          <p>Code and demo <a href="http://gediminasm.org/files/quirky.tar.gz">gediminasm.org/files/quirky.tar.gz</a></p>
           <p>Powered by: <a href="http://lab.hakim.se/reveal-js/">Revealjs</a>
         </section>
 
