init new presentation

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ h2 small{ font-size: 20px; text-transform:uppercase; letter-spacing: 14px; displ
         <li><p><a href="doctrine-extensions/index.html"><em>Doctrine behavioral extensions</em></a> How to increase productivity with doctrine extensions if you use Doctrine2 ORM.</p></li>
         <li><p><a href="testing-by-example/index.html"><em>TDD by example</em></a> How and why I use TDD.</p></li>
         <li><p><a href="ktu-karjeros-dienos/index.html"><em>From Zero to Hero</em></a> Presentation for students of KTU.</p></li>
+        <li><p><a href="kickass-dev-environment/index.html"><em>Kick-ass dev environment</em></a> Every Hero needs an utility belt!</p></li>
       </ol>
     </div>
     <div class="ol-list">
