update with more samples

--- a/kickass-dev-environment/index.html
+++ b/kickass-dev-environment/index.html
@@ -95,7 +95,7 @@
         </section>
 
         <section>
-          <img src="img/kick-ass-hero.jpg" alt="Kickass hero" />
+          <img src="img/kick-ass-hero.jpg" height="700" alt="Kickass hero" />
         </section>
 
         <section>
@@ -113,19 +113,21 @@
 
           <div class="fragment">
             <p>In other words - <strong>testing tools</strong></p>
+            <img class="my-logo fragment" src="img/phpspec.png" height="120" alt="phpspec"/>
+            <img class="my-logo fragment" src="img/behat_logo.png" height="120" alt="behat"/>
           </div>
         </section>
 
         <section>
           <p><img class="my-logo" src="img/phpspec.png" height="120" alt="phpspec"/></p>
 
-          <img src="img/phpspec-sample.png" height="500" alt="phpspec"/>
+          <img src="img/phpspec-sample.png" height="600" alt="phpspec"/>
         </section>
 
         <section>
           <p><img class="my-logo" src="img/behat_logo.png" height="90" alt="behat"/></p>
 
-          <img src="img/behat-sample.png" height="500" alt="behat"/>
+          <img src="img/behat-sample.png" height="600" alt="behat"/>
         </section>
 
         <section>
@@ -136,8 +138,21 @@
           <div class="fragment">
             <p>In other words - <strong>build tools</strong></p>
             <img class="my-logo fragment" src="img/gulp-js.jpg" height="120" alt="gulpjs"/>
-            <img class="my-logo fragment" src="img/bower.jpg" height="120" alt="behat"/>
+            <img class="my-logo fragment" src="img/bower.jpg" height="120" alt="bower"/>
           </div>
+        </section>
+
+        <section>
+          <p><img class="my-logo" src="img/gulp-js.jpg" height="90" alt="gulpjs"/></p>
+
+          <img src="img/gulp-screen.png" height="600" alt="gulp"/>
+        </section>
+
+
+        <section>
+          <p><img class="my-logo" src="img/bower.jpg" height="90" alt="bower"/></p>
+
+          <img src="img/bower-sample.png" height="600" alt="bower screenshot"/>
         </section>
 
         <section>
@@ -152,14 +167,66 @@
         </section>
 
         <section>
+          <h3>Be Ansible Hero</h3>
+
+          <img src="img/automate-it.jpg" height="600" alt="Ansible hero" />
+
+          <p>Automate your deployment process</p>
+        </section>
+
+        <section>
+          <p>One <strong>playbook</strong> for all environments:</p>
+
+          <ul>
+            <li>Development + Vagrant</li>
+            <li>Staging</li>
+            <li>Production</li>
+          </ul>
+
+          <p>Different <strong>inventory</strong> files for separate environment</p>
+
+          <img src="img/ansible-screen.png" height="500" alt="Ansible run" />
+        </section>
+
+        <section>
+          <p>All configurations are in <strong>yaml</strong></p>
+
+          <img src="img/ansible-file.png" height="600" alt="Ansible configuration file" />
+        </section>
+
+        <section>
+          <p>Convenient access to servers:</p>
+
+          <img src="img/ansible-screen2.png" height="600" alt="Ansible servers" />
+        </section>
+
+        <section>
           <h3>Batmobile</h3>
 
           <img src="img/batmobile.jpg" height="200" alt="Batmobile" />
 
           <div class="fragment">
-            <p>In other words - <strong>continous integration</strong></p>
+            <p>In other words - <strong>continuous integration - CI</strong></p>
             <img class="my-logo fragment" src="img/drone.io.jpg" height="200" alt="drone"/>
           </div>
+        </section>
+
+        <section>
+          <p>Every build runs on fresh <strong>docker</strong> image</p>
+
+          <img src="img/drone.yml.png" height="600" alt="Drone configuration file" />
+        </section>
+
+        <section>
+          <p>Simple admin panel to see builds:</p>
+
+          <img src="img/drone-build.png" height="600" alt="Drone build" />
+        </section>
+
+        <section>
+          <p>Project dashboard (builds all new branches):</p>
+
+          <img src="img/drone-project.png" height="600" alt="Drone project" />
         </section>
 
         <section>
