add some ansible slides

--- a/kickass-dev-environment/index.html
+++ b/kickass-dev-environment/index.html
@@ -161,8 +161,9 @@
 
           <div class="fragment">
             <p>In other words - <strong>deployment tools</strong></p>
-            <img class="my-logo fragment" src="img/ansible.png" height="200" alt="ansible"/>
-            <img class="my-logo fragment" src="img/docker.png" height="200" alt="docker"/>
+            <img class="my-logo fragment" src="img/ansible.png" height="120" alt="ansible"/>
+            <img class="my-logo fragment" src="img/docker.png" height="120" alt="docker"/>
+            <img class="my-logo fragment" src="img/rocket.png" height="120" alt="rocket"/>
           </div>
         </section>
 
@@ -184,20 +185,28 @@
           </ul>
 
           <p>Different <strong>inventory</strong> files for separate environments</p>
+        </section>
 
-          <img src="img/ansible-screen.png" height="500" alt="Ansible run" />
+        <section>
+          <img src="img/ansible-run.png" height="600" alt="Ansible run" />
+        </section>
+
+        <section>
+          <p>Having <strong>roles</strong> for different reusable tasks</p>
+
+          <img src="img/ansible-tree.png" height="500" alt="Ansible configuration file" />
         </section>
 
         <section>
           <p>All configurations are in <strong>yaml</strong></p>
 
-          <img src="img/ansible-file.png" height="500" alt="Ansible configuration file" />
+          <img src="img/ansible-frontend.png" height="500" alt="Ansible configuration file" />
         </section>
 
         <section>
           <p>Convenient access to servers:</p>
 
-          <img src="img/ansible-screen2.png" height="500" alt="Ansible servers" />
+          <img src="img/ansible-uptime.png" height="250" alt="Ansible servers" />
         </section>
 
         <section>
