trending web technologies - react vs angular slides
* 58b1658 finish angular part
* 7be9c44 react deps
* ca87bdf finish the presentation main parts
* dcef483 some more images

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ h2 small{ font-size: 20px; text-transform:uppercase; letter-spacing: 14px; displ
         <li><p><a href="testing-by-example/index.html"><em>TDD by example</em></a> How and why I use TDD.</p></li>
         <li><p><a href="ktu-karjeros-dienos/index.html"><em>From Zero to Hero</em></a> Presentation for students of KTU.</p></li>
         <li><p><a href="kickass-dev-environment/index.html"><em>Kick-ass dev environment</em></a> Every Hero needs an utility belt!</p></li>
+        <li><p><a href="trending-web-tech/index.html"><em>Trending web technologies</em></a> Or we can cut it down to <strong>Angular</strong> and <strong>React</strong></p></li>
       </ol>
     </div>
     <div class="ol-list">
