move some to back

--- a/trending-web-tech/index.html
+++ b/trending-web-tech/index.html
@@ -110,20 +110,6 @@
         </section>
 
         <section>
-          <h3>And Golang</h3>
-
-          <div>
-            <span class="intro">
-              <img class="intro-item no-border" src="img/golang.png" alt="golang" />
-              <img class="intro-vs no-border" src="img/vs.png" alt="vs"/>
-              <img class="intro-item no-border" src="img/question.png" alt="question"/>
-            </span>
-          </div>
-
-          <p>Without any competition? There isn't any more pragmatic language except <strong>C</strong></p>
-        </section>
-
-        <section>
           <h3>The point of the presentation</h3>
 
           <div>
@@ -315,8 +301,14 @@ React.render(&lt;WithGithubButton /&gt;, document.getElementById('with-button'))
         <section>
           <h3>Golang</h3>
 
+          <img class="no-border" height="200px" src="img/golang.png" alt="golang" />
+
+          <p>Not exactly a web technology, but trending</p>
+
           <p>It is not a rocket science, it is the simplest language out there. Think about <strong>C</strong>
           and it's success over the years. It is the most stable modern language.</p>
+
+          <p>Join <a href="http://gophers.lt">gophers.lt</a> user group.</p>
         </section>
 
         <section>
